<resources>
    <string name="app_name">BrewCo</string>
    <string name="title_home">Home</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_history">History</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="choose_your_coffee">Choose your Coffee</string>
    <string name="americano">Americano</string>
    <string name="single_shot">Single</string>
    <string name="double_shot">Double</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="anderson">Anderson</string>
    <string name="address">3 Addersion Court Chino Hills, HO56824, United State</string>
    <string name="save">Save</string>
    <string name="ed_profile_name">Name</string>
    <string name="ed_profile_address">Address</string>
    <string name="ed_profile_phone">Phone Number</string>
    <string name="ed_profile_email">Email</string>
    <string name="history">History</string>
</resources>